# deepflame-dev

./: .gitignore  .gitmodules  .readthedocs.yaml  Allwclean  Allwmake  CMakeLists.txt  Dockerfile  README.md  RunFunctions  bashrc.bak0825  bashrc.in  configure.sh  foamRunTutorials  history_log.txt  install.sh  logfile.txt  readme.md  tmp.txt
.github/workflows/: CPU_inferencce_validation.yml  Test0D.yml  build_test .yml  build_test.yml  build_trail.yml  cache_trail.yml  docker.yml  examples_run.yml  test_run.yml  trail.yml
Amgx_test_case/: correct.sh  log_CPU_1  log_CPU_8  log_GPU_1_CPU_1  log_GPU_1_CPU_1_pY  log_GPU_1_CPU_1_pYU_always  log_GPU_1_CPU_8_0.1  log_GPU_1_CPU_8_CAMG  log_GPU_1_CPU_8_agg  log_GPU_1_CPU_8_agg_L1  log_GPU_1_CPU_8_agg_never  test_nsight.nsys-rep
agents/: DFODE-kit-Trainer.md  FlamePilot.md
applications/solvers/dfHighSpeedFoam/: CMakeLists.txt  calculateR.H  createClouds.H  createFields.H  dfHighSpeedFoam.C  preCal.H  rhoEEqn.H  rhoYEqn.H
applications/solvers/dfHighSpeedFoam/Make/: files  options
applications/solvers/dfHighSpeedFoam/fluxSchemes/: AUSMDVFlux.H  KNPFlux.H
applications/solvers/dfSprayFoam/: CMakeLists.txt  EEqn.H  YEqn.H  createFields.H  dfSprayFoam.C  pEqn.H
applications/solvers/dfSprayFoam/Make/: options
dfHighSpeedFoam_new/: createFields.H  dfHighSpeedFoam.C  phiCal.H  readFluxScheme.H
docs/: requirements.txt
examples/: Allrun
src/: design.UML
src/TurbulenceModels/compressible/: CMakeLists.txt
src/TurbulenceModels/compressible/Make/: files
src/TurbulenceModels/turbulenceModels/: CMakeLists.txt
src/TurbulenceModels/turbulenceModels/Sigma/: Sigma.C
src/dfCanteraMixture/: CMakeLists.txt  CanteraMixture.C  CanteraMixture.H  makeThermos.C
src/dfCanteraMixture/Make/: files  options
src/dfCanteraMixture/dfSingleStepReactingMixture/: dfSingleStepReactingMixture.C  dfSingleStepReactingMixture.H  dfSingleStepReactingMixtureI.H
src/dfChemistryModel/: CMakeLists.txt  blasdnnFunctions.H  dfChemistryModel.C  dfChemistryModel.H  libtorchFunctions.H  pytorchFunctions.H  thermodnnFunctions.H  torchFunctions.H
src/dfChemistryModel/DNNInferencer/: CMakeLists.txt  DNNInferencer.H  DNNInferencer.cpp
src/dfChemistryModel/DNNInferencer_blas/: CMakeLists.txt  DNNInferencer_blas.cpp  DNNThermo_blas.cpp  Layer.cpp  Tensor.H  kernel.H  kernel_half.cpp
src/dfChemistryModel/Make/: options
src/dfChemistryModel/bakup/: blasdnnFunctions.H.bak0723
src/dfChemistryModel/bakup/DNNInferencer_blas.opt0723/: CMakeLists.txt  DNNInferencer_blas.H  DNNInferencer_blas.cpp  DNNThermo_blas.H  DNNThermo_blas.cpp  Layer.cpp  Layer.cpp.bak0717  Tensor.H  gelu_h_table.h  kernel_half.cpp
src/dfChemistryModel/bakup/DNNInferencer_blas_bak0717/: CMakeLists.txt  Tensor.H  kernel_half.cpp
src/dfChemistryModel/bakup/DNNInferencer_blas_ddr/: DNNInferencer_blas.H  DNNInferencer_blas.cpp  DNNThermo_blas.cpp  kernel.H
src/dfChemistryModel/loadBalancing/: ChemistryProblem.H  ChemistrySolution.C  ChemistrySolution.H  LoadBalancer.C  LoadBalancer.H
src/dfCombustionModels/: CMakeLists.txt
src/dfCombustionModels/EDC/: EDC.C
src/dfCombustionModels/FGM/baseFGM/: baseFGM.C  baseFGM.H
src/dfCombustionModels/FGM/flameletTableSolver/: readThermChemTables.H  tableSolver.C
src/dfCombustionModels/FGM/flareFGM/: README.md  flareFGM.C
src/dfCombustionModels/Make/: files  options
src/dfCombustionModels/PaSR/: PaSR.C
src/dfCombustionModels/eddyDissipationModel/: eddyDissipationModel.C  eddyDissipationModel.H  eddyDissipationModels.C
src/dfCombustionModels/infinitelyFastChemistry/: infinitelyFastChemistry.C  infinitelyFastChemistry.H  infinitelyFastChemistrys.C
src/dfCombustionModels/laminar/: laminar.C
src/dfCombustionModels/singleStepCombustion/: singleStepCombustion.C  singleStepCombustion.H
src/dynamicFvMesh/: CMakeLists.txt
src/dynamicFvMesh/Make/: options
src/dynamicFvMesh/dfDynamicRefineFvMesh/: dfDynamicRefineFvMesh.C  dfDynamicRefineFvMesh.H  multiCritRefinement.C  multiCritRefinement.H
src/dynamicFvMesh/dfRefinementHistoryConstraint/: dfRefinementHistoryConstraint.C  dfRefinementHistoryConstraint.H
src/dynamicMesh/: CMakeLists.txt
src/dynamicMesh/Make/: options
src/dynamicMesh/polyTopoChange/polyTopoChange/hexRef/: dfRefinementHistory.H  hexRef.H  hexRefNew.C
src/lagrangian/spray/: CMakeLists.txt
src/lagrangian/spray/Make/: options
src/lagrangian/spray/clouds/derived/basicSprayCloud/: basicSprayCloud.H
src/lagrangian/spray/parcels/Templates/SprayParcel/: SprayParcel.C
src/lagrangian/turbulence/: CMakeLists.txt
src/lagrangian/turbulence/Make/: options
src/thermophysicalModels/SLGThermo/: CMakeLists.txt
src/thermophysicalModels/SLGThermo/SLGThermo/: SLGThermo.H
src/thermophysicalModels/basic/: CMakeLists.txt
src_gpu/: CMakeLists.txt  dfMatrixDataBase.H  dfMatrixDataBase.cu  dfMatrixOpBase.H  dfMatrixOpBase.cu  dfRhoEqn.cu  dfUEqn.H  dfUEqn.cu  dfYEqn.H  dfYEqn.cu  dfpEqn.H  dfpEqn.cu
src_gpu/dfLinearSolver/: dfSolverOpBase.H  dfSolverOpBase.cu
src_gpu/dfLinearSolver/CSRMatrix/: dfCSRJacobiSmoother.cu  dfCSRPreconditioner.H  dfCSRSmoother.H  dfCSRSolver.H  dfGAMGCSRPreconditioner.cu  dfPBiCGStabCSRSolver.cu  dfPCGCSRSolver.cu
src_gpu/dfLinearSolver/ELLMatrix/: dfELLJacobiSmoother.cu  dfELLPreconditioner.H  dfELLSmoother.H  dfELLSolver.H  dfGAMGELLPreconditioner.cu  dfPBiCGStabELLSolver.cu  dfPCGELLSolver.cu
test/: CMakeLists.txt  corrtest.cpp  logs  readmaxT.h  readmidT.h  testLoopReport
test/Tu500K-Phi1/: Allrun  inference.py
test/dfHighSpeedFoam/oneD_detonationH2/system/: controlDict
test/dfHighSpeedFoam/oneD_reactiveShockTube/system/: controlDict
test/dfLowMachFoam/oneD_freelyPropagation/H2/cvodeSolver/: Allrun
test/dfLowMachFoam/twoD_reactingTGV/H2/cvodeSolver/: Allrun
test/dfLowMachFoam/twoD_reactingTGV/H2/cvodeSolver/system/: decomposeParDict
test/dfSprayFoam/aachenBomb/: Allrun
test/pytorchIntegrator/mechanisms/MD03_Methane_drm19_sub_20230211/MD03_Methane_drm19_sub1_20230211/checkpoint/: settings.json
test/pytorchIntegrator/system/: amgxYiOptions  controlDict
(+252 files in other folders)
